2001-06-16 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/Makefile.am: Further improvements on the noweb build mechansim

	* src/Makefile.am: Added the ability to build the docs

	* docs/Makefile.am: Added makefile

2001-06-10 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in: Minor cleanup

	* src/Makefile.am: Added support for automatic dependency tracking
	  wrt the noweb files (using VPATH)
	  
	* noweb/libgeda.c: Changed the init code so that you do not have
	  to have the GEDADATADIR variable set, but if it is, override 
	  the default
	
2001-06-07 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/libgeda.c: Added an init function for the library which is
	  responsible for make sure the require environment variable is set

	* noweb/Makefile: Added above file 

	* src/Makefile.am: Added above file

2001-06-05 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/Makefile: misc path changes

	* scripts/geda_totexi: renamed gawk to just plain awk
	
2001-06-03 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/*: Added all the .nw files that were done by Patrick B.

	* Started the slow switch to noweb (almost there, just have to 
	  get the configure mechanism setup)
	  
	* scripts/*: Added noweb -> texi backend script written by Patrick B.

	* src/*.c: Removed all *.c files from the repository
	
2001-03-18 Ales Hvezda   <ahvezda@geda.seul.org>

        * Removed all Makefile.in files and configure

2001-03-17 Ales Hvezda   <ahvezda@geda.seul.org>

	* Got make dist and make distcheck working (means all files which are
	  in CVS are in some Makefile)

        * configure.in: Added DATADIR instead of PACKAGE

2001-03-16  Stefan Petersen  <spe@geda.seul.org>

	* configure, configure.in: Didn't build properly if libgdgeda
	  was placed in a not common place.
	
2001-03-11  Stefan Petersen  <spe@geda.seul.org>

	* Makefile.am, Makefile.in, acconfig.h, config.h.in, 
	  configure, configure.in, include/Makefile.in, src/Makefile.am, 