@@ -1,0 +1,16 @@
+
+EXTRA_DIST = a_pan.nw a_zoom.nw g_funcs.nw g_hook.nw g_key.nw g_rc.nw \
+	     g_register.nw globals.nw gschem.nw i_basic.nw i_callbacks.nw \
+	     i_vars.nw o_arc.nw o_attrib.nw o_basic.nw o_box.nw o_buffer.nw \
+	     o_bus.nw o_circle.nw o_complex.nw o_copy.nw o_cue.nw \
+	     o_delete.nw o_find.nw o_grips.nw o_line.nw o_misc.nw \
+	     o_move.nw o_net.nw o_pin.nw o_select.nw o_slot.nw o_text.nw \
+	     o_undo.nw parsecmd.nw x_attrsel.nw x_basic.nw x_color.nw \
+	     x_dialog.nw x_event.nw x_fileselect.nw x_grid.nw x_image.nw \
+	     x_log.nw x_menus.nw x_multimulti.nw x_pagesel.nw x_preview.nw \
+	     x_print.nw x_script.nw x_stroke.nw x_window.nw
+
+MOSTLYCLEANFILES = *.log *~
+CLEANFILES = *.log *~
+DISTCLEANFILES = *.log *~ Makefile.in configure
+MAINTAINERCLEANFILES = *.log *~ Makefile.in configure
