@@ -5,6 +5,10 @@
 	* src/Makefile.am: Added the ability to build the docs
 
 	* docs/Makefile.am: Added makefile
+	
+	* noweb/Makefile.am: Added makefile
+
+	* scripts/Makefile.am: Added makefile
 
 2001-06-10 Ales Hvezda   <ahvezda@geda.seul.org>
 
